--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -11,5 +11,5 @@ jobs:
       uses: actions/checkout@v2
 
     - name: spell_check
-      uses: rojopolis/spellcheck-github-actions@0.31.0
+      uses: rojopolis/spellcheck-github-actions@v0
 
